src/modules/ProductDetalisPage/components/Description/Description.module.scss
.about {
  margin-bottom: 16px;
  grid-column: 1 / -1;

  @include on-desktop {
    grid-column: 1 / 13;
  }
}

.specs {
  display: flex;
  flex-direction: column;
  margin-bottom: 16px;
  grid-column: 1 / -1;
  gap: 8px;
  margin-bottom: 56px;

  @include on-tablet {
    margin-bottom: 64;
  }

  @include on-desktop {
    grid-column: 14 / -1;
    margin-bottom: 0;
  }
}

.tech {
  display: flex;
  gap: 10px;
  justify-content: space-between;
  flex-wrap: nowrap;
}

.article {
  margin-bottom: 32px;
}

.title {
  margin-bottom: 16px;
}

.title_tech {
  margin-bottom: 8px;
}

.line {
  margin-bottom: 30px;

  @include on-tablet {
    margin-bottom: 25px;
  }
}

.readBtn {
  background: none;
  border: none;
  padding: 0;
  margin: 16px 0;
  cursor: pointer;

  color: var(--primary-color);
  font-weight: 600;

  transition: opacity $duration ease;

  &:hover {
    opacity: 0.7;
  }
}

